Agregar funcionalidad de precios y video demo

--- a/inicio/templates/acerca_de_mi.html
+++ b/inicio/templates/acerca_de_mi.html
@@ -1,4 +1,4 @@
 <h1>Acerca de mí</h1>
-<p>Hola, mi nombre es Nicolás 👋</p>
+<p>Hola, me llamo Nicolas, un gusto.</p>
 <p>Tengo 27 años, me gusto aprender y saber una pequeña parte de programar.</p>
 <p>Espero poder seguir aprendiendo mas sobre esto, Gracias por todo!!</p>
