--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,2 +1,2 @@
 {% extends "base.html" %}
-{% block texto_h1 %} Bienvenidos a mi Inicio! {% endblock texto_h1 %}
+{% block texto_h1 %} Bienvenidos al Inicio del Proyecto! {% endblock texto_h1 %}
